--- a/AUTHORS
+++ b/AUTHORS
@@ -12,10 +12,9 @@ Felipe Vico
 
 
 The contributions of Leslie Greengard, Libin Lu, and 
-Manas Rachh are works made for hire for The Simons Foundation, Inc.
+Manas Rachh (prior to Jul 2025) are works made for hire for The Simons Foundation, Inc.
 
 Other contributors
 
-James Bremer
 Zydrunas Gimbutas
 
