--- a/matlab/fmm3dbie_routs.mw
+++ b/matlab/fmm3dbie_routs.mw
@@ -3520,7 +3520,7 @@ function Q = get_quadrature_correction(S, eps, zks, rep_params, targinfo, opts)
     
 
     cms = S.cms;
-    rads = S.rads 
+    rads = S.rads; 
 
     rad_near = rads*rfac;
     nnz = 0;
