windows needs #include <stdint.h> for int64_t

--- a/matlab/fmm3dbie_routs.mw
+++ b/matlab/fmm3dbie_routs.mw
@@ -1,4 +1,4 @@
-$  
+$ #include <stdint.h>
 $ #if defined(MWF77_CAPS)
 $ #define MWF77_multiscale_mesher MULTISCALE_MESHER_UNIF_REFINE_CFNAME
 $ #define MWF77_get_filetype GET_FILETYPE_CFNAME
